validate mail and add Cors